# docker-names-python

./: NOTICE  README.md  pyproject.toml
docker-names/: names-generator.py
docker_names/: __init__.py  names_generator.py
tests/: test_name_generator.py
