[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docker-names"
version = "0.0.1"
authors = [
  { name="Johannes Rust", email="johannes.rust.93@gmail.com" },
]
description = "Create easy to remember names like the default conatiner names in Docker/Mobi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/JohRust/docker-names-python"
"Bug Tracker" = "https://github.com/JohRust/docker-names-python/issues"
